src-errormsg-validators/E04-DivisionOnIntegers/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg-top8/E04-DivisionOnIntegers/Plinth.hs:154:66: error: [GHC-88464]
    Variable not in scope: (/) :: Integer -> Integer -> Integer
    |
154 |   | otherwise = (totalAllocation * (timestamp - startTimestamp)) / duration
    |                                                                  ^
